--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
-spring.application.name=sprint1
+spring.application.name=plusoft-challenge
 
 logging.level.org.hibernate.SQL=DEBUG
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
 
 ## Configurações banco de dados remoto
-spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/orcl
-spring.datasource.username=rm552364
-spring.datasource.password=180904
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/orcl
+#spring.datasource.username=rm552364
+#spring.datasource.password=180904
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
+
+## Configurações banco de dados local
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
+spring.datasource.username=system
+spring.datasource.password=552364
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
