--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,7 @@ spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/orcl
 spring.datasource.username=rm552364
 spring.datasource.password=180904
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+api.token.secret=12345678
+
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
