--- a/.github/workflows/main_api-plusoft.yml
+++ b/.github/workflows/main_api-plusoft.yml
@@ -1,3 +1,6 @@
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+
 name: Build and deploy WAR app to Azure Web App - api-plusoft
 
 on:
@@ -26,31 +29,35 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: 'target/*.war'
+          path: '${{ github.workspace }}/target/*.war'
 
   deploy:
     runs-on: windows-latest
     needs: build
     environment:
       name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write
+      id-token: write #This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: java-app
-
+      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          creds: ${{ secrets.AZUREAPPSERVICE_SECRET }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_981760E2847D45E493CCC69D3E648D1A }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_CCFD8B631102413692180E1C6F7AB020 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_514A9F4AD6194C94B7E2A1C3E4C52BE1 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'api-plusoft'  # Nome do seu Azure WebApp
-          slot-name: 'Production'  # Nome do slot se usar, senão pode remover
-          package: 'java-app/*.war'  # Certifique-se que o caminho está correto
+          app-name: 'api-plusoft'
+          slot-name: 'Production'
+          package: '*.war'
+          
