--- a/.github/workflows/main_plusoft-challenge.yml
+++ b/.github/workflows/main_plusoft-challenge.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: 'target/*.jar' 
 
   deploy:
     runs-on: windows-latest
@@ -44,8 +44,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: java-app
-      
+          name: java-app 
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -59,5 +59,4 @@ jobs:
         with:
           app-name: 'plusoft-challenge'
           slot-name: 'Production'
-          package: '*.jar'
-          
+          package: 'java-app/*.jar' 
