--- a/.github/workflows/main_plusoft-challenge.yml
+++ b/.github/workflows/main_plusoft-challenge.yml
@@ -25,11 +25,14 @@ jobs:
       - name: Build with Maven
         run: mvn clean install
 
+      - name: List target directory 
+        run: dir target
+
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: 'target/*.jar' 
 
   deploy:
     runs-on: windows-latest
@@ -38,13 +41,13 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write 
 
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: java-app 
+          name: java-app  
 
       - name: Login to Azure
         uses: azure/login@v2
@@ -59,4 +62,4 @@ jobs:
         with:
           app-name: 'plusoft-challenge'
           slot-name: 'Production'
-          package: 'java-app/*.jar' 
+          package: 'java-app/*.jar'  
