Alterando banco de dados

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.jpa.hibernate.ddl-auto=update
 server.error.include-stacktrace=never
 
 spring.datasource.url=jdbc:oracle:thin:@//oracle.fiap.com.br:1521/orcl
-spring.datasource.username=552364
+spring.datasource.username=rm552364
 spring.datasource.password=180904
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
